# imageCLI

./: .gitignore  .importlinter  .license-policy.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile.gen  LICENSE  Makefile  README.md  SECURITY.md  imagecli.example.toml  pyproject.toml
.claude/: dev-core.yml  stack.yml  stack.yml.example
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: imagecli.md
.github/workflows/: ci.yml  publish.yml
artifacts/analyses/: 31-pivotal-tuning-embeddings-analysis.mdx  34-multi-lora-pivotal-stacking-analysis.mdx  34-multi-lora-pivotal-stacking-consensus.mdx
artifacts/frames/: 10-engine-capability-matrix-frame.mdx  23-importable-python-library-frame.mdx  31-pivotal-tuning-embeddings-frame.mdx  34-multi-lora-pivotal-stacking-frame.mdx  50-nats-ingress-frame.mdx  53-quality-gates-frame.mdx  54-split-cli-py-by-command-group-frame.mdx  55-split-pulid-flux1-dev-frame.mdx  56-split-pulid-flux2-klein-frame.mdx  57-split-engine-py-base-registry-frame.mdx  58-split-flux2-klein-fp4-py-frame.mdx  59-daemon-split-frame.mdx  65-engine-subpackage-frame.mdx  84-bump-roxabi-nats-v041-frame.mdx
artifacts/plans/: 10-engine-capability-matrix-plan.mdx  23-importable-python-library-plan.mdx  31-pivotal-tuning-embeddings-plan.mdx  34-multi-lora-pivotal-stacking-plan.mdx  50-nats-ingress-plan.mdx  53-quality-gates-plan.mdx  54-split-cli-py-by-command-group-plan.mdx  55-split-pulid-flux1-dev-plan.mdx  56-split-pulid-flux2-klein-plan.mdx  57-split-engine-py-base-registry-plan.mdx  58-split-flux2-klein-fp4-py-plan.mdx  59-daemon-split-plan.mdx  65-engine-subpackage-plan.mdx  84-bump-roxabi-nats-v041-plan.mdx
artifacts/specs/: 10-engine-capability-matrix-spec.mdx  23-importable-python-library-spec.mdx  31-pivotal-tuning-embeddings-spec.mdx  34-multi-lora-pivotal-stacking-spec.mdx  50-nats-ingress-spec.mdx  53-quality-gates-spec.mdx  54-split-cli-py-by-command-group-spec.mdx  55-split-pulid-flux1-dev-spec.mdx  56-split-pulid-flux2-klein-spec.mdx  57-split-engine-py-base-registry-spec.mdx  58-split-flux2-klein-fp4-py-spec.mdx  59-daemon-split-spec.mdx  65-engine-subpackage-spec.mdx  84-bump-roxabi-nats-v041-spec.mdx
deploy/quadlet/: imagecli-gen.container
docs/: api.md  benchmark.md  cli.md  contributing.md  lora.md  memory-safety.md  performance.md  pulid-internals.md
docs/architecture/: engines.md  index.md  patterns.md  retro-architecture-docs-bootstrap.md  ubiquitous-language.md
docs/architecture/adr/: 001-hardware-capability-detection-boundary.mdx  046-imagecli-nats-ingress.mdx  047-lyra-subject-literal-confinement.mdx  048-engine-subpackage-split.mdx  meta.json
docs/standards/: backend-patterns.md  code-review.md  testing.md
images/prompts_in/: lyra-v1-cinematic.md  lyra-v2-minimalist.md  lyra-v3-anime.md  lyra-v4-wave-particle.md
images/prompts_in/aidd-lyra-event/: 01-bold-impact.md  02-corporate-moderne.md  03-minimaliste-abstrait.md  04-isometric-technical.md  05-futuristic-network.md
images/prompts_in/pulid-fp4-bench/: cinematic-bf16.md  cinematic-fp4.md  portrait-bf16.md  portrait-fp4.md
scripts/: bench-pulid-fp4.sh  check-lyra-literals.sh  score_compare.py
skills/image-generate/: SKILL.md
src/imagecli/: __init__.py  _utils.py  cli.py  config.py  daemon.py  daemon_handlers.py  engine.py  engine_base.py  engine_helpers.py  engine_registry.py  lora_spec.py  markdown.py  model_registry.py  paths.py  pivotal.py  pivotal_apply.py  pivotal_load.py
src/imagecli/commands/: __init__.py  _batch_all_on_gpu.py  _batch_common.py  _batch_sequential.py  _batch_two_phase.py  _helpers.py  batch.py  generate.py  meta.py  serve.py
src/imagecli/engine/: __init__.py  base.py  helpers.py  registry.py
src/imagecli/engines/: flux1_dev.py  flux1_schnell.py  flux2_klein.py  flux2_klein_fp4.py  flux2_klein_fp8.py  nvfp4_quantize.py  nvfp4_state_dict.py  pulid_flux1_dev.py  pulid_flux2_klein.py  pulid_flux2_klein_fp4.py  sd35.py
src/imagecli/engines/_pulid/: __init__.py  klein_modules.py  klein_patching.py  klein_preprocessing.py  modules.py  patching.py
src/imagecli/engines/nvfp4/: __init__.py  quantize.py
src/imagecli/nats/: __init__.py  adapter.py  validators.py
supervisor/conf.d/: imagecli_gen.conf
supervisor/scripts/: run_gen.sh
tests/: test_api.py  test_batch.py  test_cli.py  test_commands_helpers.py  test_config.py  test_engine.py  test_engine_submodules.py  test_lora_multi.py  test_lora_spec.py  test_markdown.py  test_markdown_edge_cases.py  test_model_registry.py  test_paths.py  test_pivotal.py  test_pulid_flux2_klein_init_order.py  test_utils.py
tests/nats/: __init__.py  test_adapter.py  test_integration.py
tools/: file_exemptions.txt  folder_exemptions.txt
