[project]
name = "imagecli"
version = "0.1.0"
description = "Unified CLI for local image generation — FLUX.2-klein, FLUX.1-dev, SD3.5 backends"
license = "MIT"
requires-python = ">=3.11,<3.13"
dependencies = [
    "typer[all]>=0.12",
    "diffusers>=0.33",
    "transformers>=4.48",
    "accelerate>=1.0",
    "sentencepiece>=0.2",
    "protobuf>=5.0",
    "Pillow>=10.0",
    "torch>=2.11",
    "torchvision>=0.26.0",
    "optimum[quanto]>=1.24",
    "tomli>=2.0; python_version < '3.11'",
    "gguf>=0.18.0",
    "einops>=0.8.2",
    "facexlib>=0.3.0",
    "peft>=0.18.1",
]

[project.scripts]
imagecli = "imagecli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imagecli"]

[tool.ruff]
target-version = "py312"
line-length = 100

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
diffusers = { git = "https://github.com/huggingface/diffusers.git", tag = "v0.37.1" }

[tool.uv]
override-dependencies = [
    "torch>=2.11",
    "torchvision>=0.26.0",
    # numpy<2 required by insightface (compiled against 1.x ABI)
    "numpy>=1.26,<2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pre-commit>=4.5.1",
    "pip-licenses>=5.5.1",
]
fp8 = [
    "torchao>=0.9",
]
fp4 = [
    "comfy-kitchen[cublas]>=0.2.7",
]
pulid = [
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.16.0",
    "open-clip-torch>=3.2.0",
    "safetensors>=0.4.0",
    "opencv-python>=4.8.0",
    "numpy>=1.26,<2.0",
    "ml_dtypes>=0.4.0",
]
